--- a/public/footer.html
+++ b/public/footer.html
@@ -5,7 +5,7 @@
 					<li><img class='bg_black' src='img/nlm-logo-white.png' alt = 'National Library of Medicine Logo' title='NLM Logo' align='middle'/>
 						<em>What is RxNix</em>
 						<p>RxNix is a simple semantic medications tool that intefaces with RxNorm - a database developed at the <a href='http://www.nlm.nih.gov/'>National Library of Medicine</a>.</p>
-						<a href=;http://www.nlm.nih.gov/research/umls/rxnorm/index.html'>About RxNorm</a>
+						<a href='http://www.nlm.nih.gov/research/umls/rxnorm/index.html'>About RxNorm</a>
 					</li>
 						
 					<li><img src='img/UMLS_header_newtree.gif' alt= 'Unified Medication Language System' title='UMLS Logo' align='middle'/>
@@ -22,7 +22,7 @@
 					<em>About</em>
 						<p>Built with <a href='https://github.com/codeforamerica/rxNorm_php'>rxNorm_php</a> api library and <a href='https://github.com/codeforamerica/rxNormRef_php'>rxNormRef_php</a> maintained  by <a href='http://codeforamerica.org'>Code For America.</a>
 							</p>
-							<img src ='http://www.totalvalidator.com/images/valid_s_us508.gif' alt='Total Validator Badge' title='Validation Badge'/>
+						
 					</li>
 				</ul>
 			</div>
