--- a/public/header.html
+++ b/public/header.html
@@ -3,4 +3,8 @@
 	<head>
 		<title>RxNIX</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="description" content="Simple semantical drug and medical terminology reference." />
+   <meta name="keywords" content="medical,terminology,national library of medicine,medicine,drugs,drug reference,rxnorm,ndfrt,va,semantic,UMLS,RXCUI,couchdb,couch,php,php5" />
+
 		<meta http-equiv="Content-Style-Type" content="text/css" />
+
